# openreserve

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  VERIFYING.md
examples/: README.md  proof_of_reserves.py  publish_and_verify_offline.py  reproducibility.py  tamper_detection.py
openreserve/: __init__.py
openreserve/core/: __init__.py  ledger.py  storage.py  types.py
openreserve/providers/: __init__.py  base.py
openreserve/regulatory/: __init__.py  payment_services_act.py
openreserve/transparency/: __init__.py  audit_log.py  merkle.py  proofs.py
tests/: test_audit_log.py  test_audit_log_tampering.py  test_determinism_guard.py  test_ledger.py  test_merkle.py  test_psa_g4.py  test_types.py
